backend-kube.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backendfuncapi
  labels:
    name: backendfuncapi
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backendfuncapi
    spec:
      containers:
      - name: backendfuncapi
        image: nxuacr.azurecr.io/facerecog/backendfuncapi:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 8.8.8.8
        searches:
          - nkhngbc1dpvehj4upoqzn5gcub.ix.internal.cloudapp.net
      imagePullSecrets:
      - name: facerecogsecret
---
apiVersion: v1
kind: Service
metadata:
  name: backendfuncapi
  labels:
    name: backendfuncapi
spec:
  ports:
  - port: 80
  selector:
    app: backendfuncapi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backendfuncapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  rules:
  - http:
      paths:
        - path: /func(/|$)(.*)
          backend:
            serviceName: backendfuncapi
            servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backendwebapi
  labels:
    name: backendwebapi
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backendwebapi
    spec:
      containers:
      - name: backendwebapi
        image: nxuacr.azurecr.io/facerecog/backendwebapi:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 8.8.8.8
        searches:
          - nkhngbc1dpvehj4upoqzn5gcub.ix.internal.cloudapp.net
      imagePullSecrets:
      - name: facerecogsecret
---
apiVersion: v1
kind: Service
metadata:
  name: backendwebapi
  labels:
    name: backendwebapi
spec:
  ports:
  - port: 80
  selector:
    app: backendwebapi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backendwebapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/blobstorage/$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  rules:
  - http:
      paths:
        - path: /web(/|$)(.*)
          backend:
            serviceName: backendwebapi
            servicePort: 80
